--- a/Test.html
+++ b/Test.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Let's Make</title>
+        <title>Let's Make Something Awful</title>
         <link rel="stylesheet" type="text/css" href="Style.css">
     </head>
     <body>
-        <h1 class="big">Look at me now</h1>
+        <h1 class="big">Oops I did it again</h1>
         <h2>Britney is lyk, totally kewl and stuffs</h2>
         <p>Mmhmmm</p>
         <a href="https://www.google.com/search?q=britney&safe=strict" target="_blank" title="Let's go to Google">Click for instant Britney Google searching wizardry<br></a>
