Jiffy Gif > jpg

--- a/Test.html
+++ b/Test.html
@@ -12,6 +12,6 @@
         <!--<p>Look at this sweet logo<br>
         below</p>
         -->
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJEzkH13VqZWVTRnkVIbUWaHh5uGl_dY1ctcIFTrRDaSAFOaiGOA&s"> 
+        <img src="https://media3.giphy.com/media/h4Z6RfuQycdiM/giphy.gif?cid=790b76112b7f1e8948a4d9baf7da3321081fc14d6e9a6051&rid=giphy.gif"> 
     </body>
 </html>
